# powerplant

./: .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  README.md  REUSE.toml  compile_commands.json  org.kde.powerplant.desktop  org.kde.powerplant.json  org.kde.powerplant.metainfo.xml
android/: AndroidManifest.xml  build.gradle  version.gradle.in
android/res/mipmap-anydpi-v26/: ic_launcher.xml
po/ar/: powerplant.po
po/ast/: powerplant.po
po/be/: powerplant.po
po/ca/: powerplant.po
po/ca@valencia/: powerplant.po
po/cs/: powerplant.po
po/de/: powerplant.po
po/en_GB/: powerplant.po
po/eo/: powerplant.po
po/es/: powerplant.po
po/eu/: powerplant.po
po/fi/: powerplant.po
po/fr/: powerplant.po
po/ga/: powerplant.po
po/gl/: powerplant.po
po/he/: powerplant.po
po/hi/: powerplant.po
po/hu/: powerplant.po
po/ia/: powerplant.po
po/it/: powerplant.po
po/ka/: powerplant.po
po/ko/: powerplant.po
po/lt/: powerplant.po
po/lv/: powerplant.po
po/nl/: powerplant.po
po/pl/: powerplant.po
po/pt_BR/: powerplant.po
po/ro/: powerplant.po
po/sa/: powerplant.po
po/sk/: powerplant.po
po/sl/: powerplant.po
po/sv/: powerplant.po
po/tr/: powerplant.po
po/ug/: powerplant.po
po/uk/: powerplant.po
po/zh_CN/: powerplant.po
po/zh_TW/: powerplant.po
src/: CMakeLists.txt  HealthSlider.qml  Messages.sh  PlantsPage.qml  about.cpp  about.h  app.cpp  app.h  colorgradientinterpolator.cpp  colorgradientinterpolator.h  config-powerplant.h.cmake  database.cpp  database.h  fertilizerhistorymodel.cpp  fertilizerhistorymodel.h  healthhistorymodel.cpp  healthhistorymodel.h  main.cpp  planteditor.cpp  planteditor.h  plantimagemodel.cpp  plantimagemodel.h  plantsmodel.cpp  plantsmodel.h  powerplantconfig.cpp  powerplantconfig.kcfg  powerplantconfig.kcfgc  resources.qrc  waterhistorymodel.cpp  waterhistorymodel.h  weathermodel.cpp  weathermodel.h
src/contents/: test.sqlite
src/contents/migrations/2023-04-10-140702_init/: down.sql  up.sql
src/contents/migrations/2024-12-14-154417_fertilize-history/: down.sql  up.sql
src/contents/ui/: About.qml  AddPlantSheet.qml  HealthSlider.qml  PlantDetailPage.qml  PlantEditorPage.qml  PlantsPage.qml  main.qml
src/contents/ui/ColorInterpolation/: ColorInterpolation.qml  InterpolationStop.qml
src/contents/ui/components/: ActionButton.qml  BottomDrawer.qml  DoubleActionButton.qml  TextIconBox.qml
src/qml/: About.qml  HealthSlider.qml  Main.qml  NavigationBar.qml  PlantDetailPage.qml  PlantEditorPage.qml  PlantsPage.qml  TaskPage.qml
src/qml/components/: TextIconBox.qml
